fixed alignment product set boxes

--- a/static_files/scss/jack-jones.scss
+++ b/static_files/scss/jack-jones.scss
@@ -53,6 +53,16 @@
     .productsetdetail {
         background: none;
     }
+
+        
+
+    div.productsetdetail {
+        .grid_10 {
+            width: 258px;
+            background-image: none;
+        }
+    }
+
 }
 
 #branded.pt_productdetails .productset {
